--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso html5</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum atque earum repudiandae, veniam quia neque debitis nemo nulla qui nisi ab obcaecati cum repellendus omnis molestias quos minima. Natus, iste!</p>
         </article>
         <article>
-            <h2>Artigo 0002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso Java</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolor libero ut dolorum itaque minus ullam voluptates maxime nihil corrupti voluptatum, aspernatur harum, recusandae accusamus modi nulla ad, saepe esse!</p>
         </article>
     </main>
     
